Fix blurring on edges of product images on Product pages

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -35,6 +35,7 @@
 
 .product-image
   display: block
+  transform: translate3d(0, 0, 0)
   width: 100%
 
 .product-images
